# youtube-whisper-sbert

./: Makefile  README.md  pipeline.py  pyproject.toml  skaffold.yaml  urls-from-Community-notes  youtube (2).ipynb
.devcontainer/: devcontainer.json
components/sentence_transformer/: pyproject.toml
components/small-ffmpeg/: Dockerfile  build.sh
components/whisper_transcripter/: pyproject.toml
components/youtube_downloader/: pyproject.toml
