[tool.poetry]
name = "youtube-whisper-sbert"
version = "0.0.1"
description = "Module that contains the code for pipeline development"
authors = ["David Cardozo <david.cardozo@me.com>"]
readme = "README.md"
packages = [{include = "youtube_whisper_sbert"}]

[tool.poetry.dependencies]
python = "^3.10"
kfp = {version = "2.0.0b11", extras = ["all"]}
openai-whisper = "^20230124"

[tool.poetry.group.dev.dependencies]
black = "^22.12.0"
isort = "^5.11.4"
ipykernel = "^6.20.2"


[tool.poetry.group.google-dev.dependencies]
google-cloud-aiplatform = "^1.21.0"


[tool.poetry.group.lightweight-python-components.dependencies]
requests = "^2.28.2"
pytube = "^12.1.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
