[tool.poetry]
name = "whispher_transcripter"
version = "1.0.0"
description = "Whispher Transcript Implementation"
repository = ""
authors = [
    "Josh Bottum <joshbottum@gmail.com>",
    "Charles Adetiloye <charles@mavencode.com>",
]
readme = "readme.md"
classifiers = [
    "DataPipeline :: Python :: 3",
]

[tool.poetry.dependencies]
python = "^3.10.0"
click = "^8.1.3"


[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"